@@ -26,7 +26,7 @@ int f(int x, int y, int z, int a, U u)
 void
 testTortureExecute (void)
 {
-#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_mos6502) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) // Todo: enable when struct parameters are supported!
+#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_mos6502) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) // Bug?
   U u = { .ss = -1 };
 
   if (f (0, 0, 0, 0, u) != (1 << sizeof (short) * 8))
