@@ -45,7 +45,7 @@ testTortureExecute (void)
   from_input.symtype = 7;
   from_input.symflags = 8;
   from_input.marker = 9;
-#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_mos6502) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) // Todo: enable when struct parameters are supported!
+#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) && !defined(__SDCC_mos6502) // Bug?
   t0 (to_input, from_input);
 #endif
   return;
